Fixed Rating and Spacing. Completed Assignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,10 +19,37 @@
 }
 
 img{
-    width: 240px;
-    margin: 20px;
+    width: 300px;
+    margin: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;  
+      
+}
+
+div.gifImage{
+    display: inline-block;
+    padding: 5px;
+    text-align: center;
+    
+}
+
+.gifDiv{
+    margin: 30px 30px 30px 30px;
+    display: inline-block;
+    align-content: center;
 }
 
 #gifDiv{
-    margin: 50px 30px 0 30px;
+    margin: 30px 30px 30px 30px;
+    display: inline-block;
+    align-content: center;
+}
+
+.gifImage{
+    display: inline;
+}
+
+div.gifDiv{
+    text-align: center;
 }
